[tool.poetry]
name = "anthropic_retriever"
version = "0.0.1"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
langchain = ">=0.0.313"
anthropic = "^0.5.0"
wikipedia = "^1.4.0"

[tool.langserve]
export_module = "anthropic_retriever.agent"
export_attr = "executor"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
