[tool.poetry]
name = "langservehub"
version = "0.1.6"
description = ""
authors = ["Erick Friis <erick@langchain.dev>"]
readme = "README.md"
include = [
    {path="project_template/**/*", format="wheel"},
    {path="package_template/**/*", format="wheel"}
]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"

[tool.poetry.scripts]
langservehub = "langservehub.cli:app"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
