[tool.poetry]
name = "langservehub"
version = "0.1.12"
description = ""
authors = ["Erick Friis <erick@langchain.dev>"]
readme = "README.md"
include = [
    {path="project_template/**/*", format="wheel"},
    {path="package_template/**/*", format="wheel"}
]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.9.0"

[tool.poetry.scripts]
langservehub = "langservehub.cli:app"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
