[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Erick Friis <erick@langchain.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langserve = "^0.0.8"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
sse-starlette = "^1.6.5"
typer = "^0.9.0"
langchain = "^0.0.313"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
