[tool.poetry]
name = "llamacpp"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = ">=0.0.313"
llama-cpp-python=="^0.1.79"

[tool.langserve]
export_module = "llamacpp.chain"
export_attr = "chain"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
