[tool.poetry]
name = "__package_name__"
version = "0.1.0"
description = "__package_description__"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.langserve]
export_module = "__export_module__.chain"
export_attr = "chain"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
