[tool.poetry]
name = "chroma-rag"
version = "0.1.0"
description = ""
authors = ["Erick Friis <erick@langchain.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.313"
openai = "^0.28.1"
tiktoken = "^0.5.1"
chromadb = "^0.4.14"

[tool.langserve]
export = "chroma_rag.chain"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
