[tool.poetry]
name = "pirate"
version = "0.1.0"
description = ""
authors = ["Erick Friis <erick@langchain.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = ">=0.0.313, <0.1"
openai = "^0.28.1"

[tool.langserve]
export_module = "pirate"
export_attr = "chain"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
