[tool.poetry]
name = "langservehubbase"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tomli-w = "^1.0.0"
langserve = "^0.0.8"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
sse-starlette = "^1.6.5"
typer = "^0.9.0"

[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"
